Updating file system and model

--- a/MrCrutcherProjects/LicensePlateProject/Tristans_Code/kerasModelandData/KerasLicensePlateModel.ipynb
+++ b/MrCrutcherProjects/LicensePlateProject/Tristans_Code/kerasModelandData/KerasLicensePlateModel.ipynb
@@ -121,19 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "40c8b0fe-e39e-40e5-bbf7-38b5c88818e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DefaultConv2D = partial(keras.layers.Conv2D,\n",
-    "                        kernel_size=3, activation='relu', padding=\"SAME\")\n",
-    "\n",
     "model = keras.models.Sequential([\n",
     "    keras.layers.AveragePooling2D(pool_size=2, input_shape=[80, 60, 1]),\n",
-    "    keras.layers.Conv2D(filters=64, kernel_size=13, name=\"First_Conv2D\", padding=\"SAME\", activation='relu'),\n",
+    "    keras.layers.Conv2D(filters=32, kernel_size=13, name=\"First_Conv2D\", padding=\"SAME\", activation='relu'),\n",
     "    keras.layers.AveragePooling2D(pool_size=2),\n",
-    "    DefaultConv2D(filters=128, kernel_size=9, name=\"Second_Conv2D\"),\n",
+    "    keras.layers.Conv2D(filters=64, kernel_size=9, name=\"Second_Conv2D\", padding=\"SAME\", activation='relu'),\n",
+    "    keras.layers.AveragePooling2D(pool_size=2),\n",
+    "    keras.layers.Conv2D(filters=64, kernel_size=5, name=\"ThirdConv2D\", padding=\"SAME\", activation='relu'),\n",
     "    keras.layers.AveragePooling2D(pool_size=2),\n",
     "    \n",
     "    keras.layers.Flatten(),\n",
@@ -145,7 +144,7 @@
     "#     keras.layers.Dense(units = 800, activation='relu', name=\"Dense_4\"),\n",
     "#     keras.layers.Dropout(0.5),\n",
     "#     keras.layers.Dense(units = 200, activation='relu', name=\"Dense_5\"),\n",
-    "    keras.layers.Dense(units = 200, activation='relu', name=\"Dense_6\"),\n",
+    "    keras.layers.Dense(units = 100, activation='relu', name=\"Dense_6\"),\n",
     "    keras.layers.Dropout(0.5),\n",
     "    keras.layers.Dense(units = 37, activation='softmax', name=\"Dense_FINAL\")\n",
     "])"
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "fbc1bc12-3ad3-422f-8d36-38f5a079be53",
    "metadata": {},
    "outputs": [],
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "7f3c79d4-3741-46aa-a611-e00d9dd55ee7",
    "metadata": {},
    "outputs": [
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "880f7612-a504-42a0-bc5d-60924ba77d52",
    "metadata": {},
    "outputs": [
@@ -198,88 +197,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
+      "average_pooling2d_4 (Average (None, 40, 30, 1)         0         \n",
       "_________________________________________________________________\n",
-      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
+      "First_Conv2D (Conv2D)        (None, 40, 30, 32)        5440      \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
+      "average_pooling2d_5 (Average (None, 20, 15, 32)        0         \n",
       "_________________________________________________________________\n",
-      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
+      "Second_Conv2D (Conv2D)       (None, 20, 15, 64)        165952    \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
+      "average_pooling2d_6 (Average (None, 10, 7, 64)         0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 8960)              0         \n",
+      "ThirdConv2D (Conv2D)         (None, 10, 7, 64)         102464    \n",
       "_________________________________________________________________\n",
-      "Dense_6 (Dense)              (None, 200)               1792200   \n",
+      "average_pooling2d_7 (Average (None, 5, 3, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 200)               0         \n",
+      "flatten_1 (Flatten)          (None, 960)               0         \n",
       "_________________________________________________________________\n",
-      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
+      "Dense_6 (Dense)              (None, 100)               96100     \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 100)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_FINAL (Dense)          (None, 37)                3737      \n",
       "=================================================================\n",
-      "Total params: 2,474,197\n",
-      "Trainable params: 2,474,197\n",
+      "Total params: 373,693\n",
+      "Trainable params: 373,693\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Epoch 1/12\n",
-      "24/24 [==============================] - 69s 3s/step - loss: 1.5847 - accuracy: 0.6437\n",
-      "Epoch 2/12\n",
-      "24/24 [==============================] - 45s 2s/step - loss: 0.5136 - accuracy: 0.8818\n",
-      "Epoch 3/12\n",
-      "24/24 [==============================] - 44s 2s/step - loss: 0.3439 - accuracy: 0.9217\n",
-      "Epoch 4/12\n",
-      "24/24 [==============================] - 43s 2s/step - loss: 0.2522 - accuracy: 0.9460\n",
-      "Epoch 5/12\n",
-      "24/24 [==============================] - 42s 2s/step - loss: 0.2296 - accuracy: 0.9532\n",
-      "Epoch 6/12\n",
-      "24/24 [==============================] - 44s 2s/step - loss: 0.1947 - accuracy: 0.9538\n",
-      "Epoch 7/12\n",
-      "24/24 [==============================] - 43s 2s/step - loss: 0.1757 - accuracy: 0.9607\n",
-      "Epoch 8/12\n",
-      "24/24 [==============================] - 44s 2s/step - loss: 0.1421 - accuracy: 0.9692\n",
-      "Epoch 9/12\n",
-      "24/24 [==============================] - 60s 3s/step - loss: 0.1299 - accuracy: 0.9705\n",
-      "Epoch 10/12\n",
-      "24/24 [==============================] - 43s 2s/step - loss: 0.1282 - accuracy: 0.9699\n",
-      "Epoch 11/12\n",
-      "24/24 [==============================] - 43s 2s/step - loss: 0.1112 - accuracy: 0.9725\n",
-      "Epoch 12/12\n",
-      "24/24 [==============================] - 45s 2s/step - loss: 0.1091 - accuracy: 0.9718\n"
+      "Epoch 1/15\n",
+      "24/24 [==============================] - 38s 2s/step - loss: 2.8210 - accuracy: 0.2708\n",
+      "Epoch 2/15\n",
+      "24/24 [==============================] - 26s 1s/step - loss: 1.3391 - accuracy: 0.6637\n",
+      "Epoch 3/15\n",
+      "24/24 [==============================] - 31s 1s/step - loss: 0.8216 - accuracy: 0.8016\n",
+      "Epoch 4/15\n",
+      "24/24 [==============================] - 19s 757ms/step - loss: 0.6297 - accuracy: 0.8589\n",
+      "Epoch 5/15\n",
+      "24/24 [==============================] - 16s 657ms/step - loss: 0.5189 - accuracy: 0.8815\n",
+      "Epoch 6/15\n",
+      "24/24 [==============================] - 20s 831ms/step - loss: 0.4347 - accuracy: 0.8933\n",
+      "Epoch 7/15\n",
+      "24/24 [==============================] - 15s 639ms/step - loss: 0.3939 - accuracy: 0.9044\n",
+      "Epoch 8/15\n",
+      "24/24 [==============================] - 15s 606ms/step - loss: 0.3305 - accuracy: 0.9221\n",
+      "Epoch 9/15\n",
+      "24/24 [==============================] - 17s 708ms/step - loss: 0.2910 - accuracy: 0.9348\n",
+      "Epoch 10/15\n",
+      "24/24 [==============================] - 24s 1s/step - loss: 0.2647 - accuracy: 0.9384\n",
+      "Epoch 11/15\n",
+      "24/24 [==============================] - 20s 819ms/step - loss: 0.2420 - accuracy: 0.9476\n",
+      "Epoch 12/15\n",
+      "24/24 [==============================] - 26s 1s/step - loss: 0.2401 - accuracy: 0.9391\n",
+      "Epoch 13/15\n",
+      "24/24 [==============================] - 33s 1s/step - loss: 0.2373 - accuracy: 0.9483\n",
+      "Epoch 14/15\n",
+      "24/24 [==============================] - 20s 840ms/step - loss: 0.2087 - accuracy: 0.9525\n",
+      "Epoch 15/15\n",
+      "24/24 [==============================] - 17s 726ms/step - loss: 0.1874 - accuracy: 0.9571\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f83fa8994f0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fe8e0231130>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.summary()\n",
-    "model.fit(letters, keys, batch_size=128, epochs=12)"
+    "model.fit(letters, keys, batch_size=128, epochs=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2095644e-1d02-414c-8973-2c24aa235374",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_array = np.zeros((1, 80, 60, 1), dtype=\"float32\")\n",
     "number_array[0] = letters[2]\n",
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f19302b4-447d-45f2-930b-3a4171ceeac9",
    "metadata": {},
    "outputs": [],
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7c7fff34-d726-4757-bbee-0a99daf4a9d3",
    "metadata": {},
    "outputs": [],
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "df43e3d2-76c0-43d4-aa0b-e1e187a75a3b",
    "metadata": {},
    "outputs": [],
@@ -319,18 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c7028900-84ab-435c-b9c6-c1da495da8e3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history = model2.predict(tf.constant(np.array(number_array, dtype=\"float32\")))\n",
     "print(return_letter_dict[np.argmax(history)])"
@@ -338,86 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a5a8d7ae-e084-4540-85d5-3f6990fbab06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"License_Plate_Model\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
-      "_________________________________________________________________\n",
-      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 8960)              0         \n",
-      "_________________________________________________________________\n",
-      "Dense_6 (Dense)              (None, 200)               1792200   \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 200)               0         \n",
-      "_________________________________________________________________\n",
-      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
-      "=================================================================\n",
-      "Total params: 2,474,197\n",
-      "Trainable params: 2,474,197\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8620e483-3fe5-4188-a7a2-807c736076ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"License_Plate_Model\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
-      "_________________________________________________________________\n",
-      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 8960)              0         \n",
-      "_________________________________________________________________\n",
-      "Dense_6 (Dense)              (None, 200)               1792200   \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 200)               0         \n",
-      "_________________________________________________________________\n",
-      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
-      "=================================================================\n",
-      "Total params: 2,474,197\n",
-      "Trainable params: 2,474,197\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model2.summary()"
    ]
