--- a/MrCrutcherProjects/LicensePlateProject/Tristans_Code/KerasLicensePlateModel.ipynb
+++ b/MrCrutcherProjects/LicensePlateProject/Tristans_Code/KerasLicensePlateModel.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "40c8b0fe-e39e-40e5-bbf7-38b5c88818e2",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "fbc1bc12-3ad3-422f-8d36-38f5a079be53",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7f3c79d4-3741-46aa-a611-e00d9dd55ee7",
    "metadata": {},
    "outputs": [
@@ -189,8 +189,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "93a9c5a7-b628-460f-bbed-53595427a81a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "First_Conv2D (Conv2D)        (None, 40, 30, 32)        5440      \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_1 (Average (None, 20, 15, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "Second_Conv2D (Conv2D)       (None, 20, 15, 64)        165952    \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_2 (Average (None, 10, 7, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "ThirdConv2D (Conv2D)         (None, 10, 7, 64)         102464    \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_3 (Average (None, 5, 3, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 960)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_6 (Dense)              (None, 100)               96100     \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 100)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_FINAL (Dense)          (None, 37)                3737      \n",
+      "=================================================================\n",
+      "Total params: 373,693\n",
+      "Trainable params: 373,693\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
-   "id": "880f7612-a504-42a0-bc5d-60924ba77d52",
+   "id": "97c70d5a-b5c5-472d-80c1-c69edda048fd",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +318,6 @@
     }
    ],
    "source": [
-    "model.summary()\n",
     "model.fit(letters, keys, batch_size=128, epochs=15)"
    ]
   },
